squirrel z-index fixed and mobile landscapes fixed

--- a/styles/squirrel.css
+++ b/styles/squirrel.css
@@ -4,4 +4,5 @@
     height: auto;
     bottom: 20px;
     right: 20px;
+    z-index: 100;
 }
